# agimage

./: README.md  pyproject.toml
deploy/compose/: docker-compose.local.yml
services/api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/api/src/agimage_api/: main.py
services/worker/: README.md  pyproject.toml
services/worker/src/agimage_worker/: main.py
services/worker/src/agimage_worker/tasks/: utils.py
